disable package-comments rule which doesn't like go:build comment

--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -76,6 +76,9 @@ linters-settings:
       - shadow
   lll:
     line-length: 140
+  revive:
+    disable:
+    - package-comments
 issues:
   exclude:
     - composites
