--- a/.github/workflows/proto-checks.yml
+++ b/.github/workflows/proto-checks.yml
@@ -16,6 +16,10 @@ jobs:
       image: ghcr.io/viamrobotics/canon:amd64-cache
       options: --platform linux/amd64
     steps:
+    - uses: docker/login-action@v1
+      with:
+        username: soyybean
+        password: dckr_pat_kXtItMP6C7iN17oWJFCZ2JseVsg
     - uses: actions/checkout@v3
     - uses: bufbuild/buf-setup-action@v1
     # Run all Lint runs
