add docker info pt. 2

--- a/.github/workflows/proto-checks.yml
+++ b/.github/workflows/proto-checks.yml
@@ -22,9 +22,17 @@ jobs:
         password: dckr_pat_kXtItMP6C7iN17oWJFCZ2JseVsg
     - uses: actions/checkout@v3
     - uses: bufbuild/buf-setup-action@v1
+      with:
+        username: soyybean
+        password: dckr_pat_kXtItMP6C7iN17oWJFCZ2JseVsg
     # Run all Lint runs
     - uses: bufbuild/buf-lint-action@v1
+      with:
+        username: soyybean
+        password: dckr_pat_kXtItMP6C7iN17oWJFCZ2JseVsg
     # Run breaking change detection against the `main` branch
     - uses: bufbuild/buf-breaking-action@v1
       with:
         against: 'https://github.com/viamrobotics/goutils.git#branch=main'
+        username: soyybean
+        password: dckr_pat_kXtItMP6C7iN17oWJFCZ2JseVsg
