set npx webpack as build step and call run build everywhere else

--- a/rpc/examples/echo/frontend/package.json
+++ b/rpc/examples/echo/frontend/package.json
@@ -21,6 +21,7 @@
   },
   "scripts": {
     "prepare": "./etc/prepare.sh",
+    "build": "npx webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
