--- a/rpc/examples/echo/frontend/package.json
+++ b/rpc/examples/echo/frontend/package.json
@@ -8,20 +8,20 @@
     "google-protobuf": "^3.14.0"
   },
   "devDependencies": {
-    "ansi-regex": ">=5.0.1",
-    "set-value": ">=4.0.1",
-    "@webpack-cli/serve": "^1.3.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
     "@types/google-protobuf": "^3.7.4",
+    "@webpack-cli/serve": "^1.3.1",
+    "ansi-regex": ">=5.0.1",
     "concurrently": "^5.3.0",
+    "set-value": ">=4.0.1",
     "ts-loader": "^8.0.14",
     "ts-protoc-gen": "^0.14.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^4.10.0"
   },
   "scripts": {
     "prepare": "./etc/prepare.sh",
-    "build": "npx webpack",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
