--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -15,7 +15,7 @@
     "tslib": "^2.4.1",
     "typescript": "^4.8.4",
     "vite": "^3.1.4",
-    "webpack": "^5.74.0",
+    "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0"
   },
   "main": "dist/main.mjs",
@@ -24,7 +24,7 @@
     "prepare": "./etc/prepare.sh",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write '**/*.{ts,js}'",
-    "build": "npx webpack",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
