--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -9,12 +9,13 @@
   "devDependencies": {
     "@types/google-protobuf": "^3.7.4",
     "@viamrobotics/prettier-config": "^0.3.4",
+    "@viamrobotics/typescript-config": "^0.1.0",
     "prettier": "^3.0.3",
     "set-value": ">=4.0.1",
     "ts-loader": "^9.4.1",
     "ts-protoc-gen": "^0.14.0",
     "tslib": "^2.4.1",
-    "typescript": "^4.8.4",
+    "typescript": "^5.2.2",
     "vite": "^3.1.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
