add back two compiler options

--- a/rpc/js/tsconfig.json
+++ b/rpc/js/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "@viamrobotics/typescript-config/base.json",
   "compilerOptions": {
     "target": "ES5",
+    "useDefineForClassFields": true,
+    "importHelpers": true,
     "module": "commonjs",
     "moduleResolution": "Node",
     "verbatimModuleSyntax": false,
