--- a/rpc/js/tsconfig.json
+++ b/rpc/js/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "extends": "@viamrobotics/typescript-config/base.json",
+  "compilerOptions": {
+    "target": "ES5",
+    "useDefineForClassFields": true,
+    "importHelpers": true,
+    "module": "commonjs",
+    "moduleResolution": "Node",
+    "verbatimModuleSyntax": false,
+    "lib": ["ESNext", "DOM", "DOM.iterable"]
+  },
   "include": ["src", ".*.cjs", "*.js"],
   "exclude": ["node_modules", "src/gen"]
 }
