run web tests in CI

--- a/rpc/examples/echo/Makefile
+++ b/rpc/examples/echo/Makefile
@@ -9,6 +9,13 @@ build:
 run-server: build
 	go run server/cmd/main.go -instance-name=echo-server
 
+.PHONY: install-playwright
+install-playwright:
+	npx playwright install
+
+test-run-server: build install-playwright
+	npx playwright test
+
 run-client:
 	go run client/main.go -host=echo-server
 
