RSDK-5308-3 - add eslint configuration (#219)
Co-authored-by: Maxim Pertsov <maxim@viam.com>
Co-authored-by: Michael Cousins <michael@cousins.io>

--- a/rpc/js/tsconfig.json
+++ b/rpc/js/tsconfig.json
@@ -9,6 +9,6 @@
     "verbatimModuleSyntax": false,
     "lib": ["ESNext", "DOM", "DOM.iterable"]
   },
-  "include": ["src"],
+  "include": ["src", ".*.cjs", "*.js"],
   "exclude": ["node_modules", "src/gen"]
 }
