--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,6 +77,14 @@ jobs:
     - name: Test js library
       run: sudo -u testbot bash -lc 'make test-web'
 
+    - if: failure()
+      name: Upload js test report
+      uses: actions/upload-artifact@v3
+      with:
+        name: playwright-report
+        path: rpc/examples/echo/playwright-report/
+        retention-days: 30
+
     - name: Test go library
       env:
         TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
