Revert "use a specific artifact version [skip ci]"
This reverts commit 3cb4cda5a37b6d83b5583d448743a5bd56b7dcd9.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,10 +79,10 @@ jobs:
 
     - if: failure()
       name: Upload js test report
-      uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce #v3.1.2
+      uses: actions/upload-artifact@v3
       with:
         name: playwright-report
-        path: rpc/examples/echo/playwright-report/
+        path: ${{ github.workspace}}/rpc/examples/echo/playwright-report
         retention-days: 30
 
     - name: Test go library
