--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,14 +80,17 @@ jobs:
     - if: failure()
       run: |
         pwd
-        ls
+        ls rpc
+        ls rpc/examples
+        ls rpc/examples/echo/
+        ls rpc/examples/echo/playwright-report
 
     - if: failure()
       name: Upload js test report
       uses: actions/upload-artifact@v3
       with:
         name: playwright-report
-        path: ${{ github.workspace}}/rpc/examples/echo/playwright-report
+        path: rpc/examples/echo/playwright-report
         retention-days: 30
 
     - name: Test go library
