--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,7 +74,26 @@ jobs:
             exit 1
         fi
 
-    - name: Test
+    - name: Test js library
+      run: sudo -u testbot bash -lc 'CI=true make test-web'
+
+    - if: failure()
+      run: |
+        pwd
+        ls rpc
+        ls rpc/examples
+        ls rpc/examples/echo/
+        ls rpc/examples/echo/playwright-report
+
+    - if: failure()
+      name: Upload js test report
+      uses: actions/upload-artifact@v3
+      with:
+        name: playwright-report
+        path: rpc/examples/echo/playwright-report
+        retention-days: 30
+
+    - name: Test go library
       env:
         TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
         MONGODB_TEST_OUTPUT_URI: ${{ secrets.MONGODB_TEST_OUTPUT_URI }}
