--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@viamrobotics/rpc",
-  "version": "0.1.39",
+  "version": "0.2.0",
   "license": "Apache-2.0",
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.13.0",
@@ -23,19 +23,21 @@
     "ts-protoc-gen": "^0.14.0",
     "tslib": "^2.4.1",
     "typescript": "^5.2.2",
-    "vite": "^3.1.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "vite": "^5.0.6"
   },
-  "main": "dist/main.mjs",
-  "types": "src/index.d.ts",
+  "type": "module",
+  "types": "./dist/main.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/main.js"
+    }
+  },
   "scripts": {
     "prepare": "./etc/prepare.sh",
     "typecheck": "tsc --noEmit",
     "lint": "eslint '.*.cjs' '**/*.{ts,js,cjs}' --quiet",
     "format": "prettier --write '**/*.{ts,js,cjs}'",
-    "build:webpack": "npx webpack",
-    "build:vite": "vite build",
+    "build": "vite build && tsc --emitDeclarationOnly",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
