--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -29,6 +29,7 @@
   "types": "./dist/main.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/main.d.ts",
       "import": "./dist/main.js"
     }
   },
