remove .*.cjs from eslint

--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "prepare": "./etc/prepare.sh",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint '.*.cjs' '**/*.{ts,js,cjs}' --quiet",
+    "lint": "eslint '**/*.{ts,js,cjs}' --quiet",
     "format": "prettier --write '**/*.{ts,js,cjs}'",
     "build": "vite build && tsc --emitDeclarationOnly",
     "test": "echo \"Error: no test specified\" && exit 1"
