make examples consistent with ts sdk

--- a/rpc/examples/echo/frontend/tsconfig.json
+++ b/rpc/examples/echo/frontend/tsconfig.json
@@ -11,11 +11,8 @@
     "noFallthroughCasesInSwitch": true,
     "noEmitOnError": true,
     "esModuleInterop": true,
-    "lib": [
-        "es2015",
-        "es2017.object",
-        "dom"
-    ],
+    "lib": ["es2015", "es2017.object", "dom"],
     "baseUrl": "./"
-  }
+  },
+  "types": ["vitest"]
 }
