--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -23,7 +23,7 @@
     "ts-protoc-gen": "^0.14.0",
     "tslib": "^2.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.6"
+    "vite": "^4.0.0"
   },
   "type": "module",
   "types": "./dist/main.d.ts",
@@ -38,7 +38,7 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint '**/*.{ts,js,cjs}' --quiet",
     "format": "prettier --write '**/*.{ts,js,cjs}'",
-    "build": "vite build && tsc --emitDeclarationOnly",
+    "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
