add pr feedback

--- a/rpc/js/tsconfig.json
+++ b/rpc/js/tsconfig.json
@@ -13,6 +13,6 @@
     "outDir": "dist",
     "lib": ["ESNext", "DOM", "DOM.iterable"]
   },
-  "include": ["src"],
+  "include": ["src", "vite.config.ts"],
   "exclude": ["node_modules", "src/gen"]
 }
