--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -51,5 +51,9 @@
   },
   "homepage": "https://github.com/viamrobotics/goutils#readme",
   "description": "",
-  "private": false
+  "private": false,
+  "files": [
+    "dist",
+    "src"
+  ]
 }
