--- a/rpc/js/tsconfig.json
+++ b/rpc/js/tsconfig.json
@@ -4,11 +4,11 @@
     "target": "ES5",
     "useDefineForClassFields": true,
     "importHelpers": true,
-    "module": "commonjs",
-    "moduleResolution": "Node",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "verbatimModuleSyntax": false,
     "lib": ["ESNext", "DOM", "DOM.iterable"]
   },
-  "include": ["src", ".*.cjs", "*.js"],
+  "include": ["src", "vite.config.ts", ".*.cjs"],
   "exclude": ["node_modules", "src/gen"]
 }
