--- a/.github/workflows/proto-checks.yml
+++ b/.github/workflows/proto-checks.yml
@@ -13,7 +13,7 @@ jobs:
     timeout-minutes: 5
     runs-on: [self-hosted, x64]
     container:
-      image: ghcr.io/viamrobotics/canon:amd64-cache
+      image: ghcr.io/viamrobotics/rdk-devenv:amd64-cache
       options: --platform linux/amd64
     steps:
     - uses: actions/checkout@v3
