--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
     name: Build and Test
     runs-on: [x64, qemu-host]
     container:
-      image: ghcr.io/viamrobotics/canon:amd64-cache
+      image: ghcr.io/viamrobotics/rdk-devenv:amd64-cache
       options: --platform linux/amd64
     timeout-minutes: 20
     if: |
