--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,9 @@ jobs:
     - name: Install Protoc
       uses: arduino/setup-protoc@v3
 
+    - name: Install grpc-web plugin
+      run: sudo apt-get install -y protoc-gen-grpc-web
+
     - name: Check out main branch code
       if: github.event_name == 'workflow_dispatch' || github.event_name == 'push'
       uses: actions/checkout@v3
