--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,11 +34,16 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Setup node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+
     - name: Install Protoc
       uses: arduino/setup-protoc@v3
 
     - name: Install grpc-web plugin
-      run: sudo apt-get install -y protoc-gen-grpc-web
+      run: npm install -g protoc-gen-grpc-web
 
     - name: Check out main branch code
       if: github.event_name == 'workflow_dispatch' || github.event_name == 'push'
