--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,6 +41,8 @@ jobs:
 
     - name: Install Protoc
       uses: arduino/setup-protoc@v3
+      with:
+        version: "21.x"
 
     - name: Install grpc-web plugin
       run: npm install -g protoc-gen-grpc-web
