--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,16 +22,31 @@ jobs:
 
   build_and_test:
     name: Build and Test
-    runs-on: [x64, qemu-host]
-    container:
-      image: ghcr.io/viamrobotics/canon:amd64-cache
-      options: --platform linux/amd64
+    runs-on: ubuntu-latest
     timeout-minutes: 20
     if: |
       github.event_name == 'workflow_dispatch' || github.event_name == 'push' ||
       (github.event_name == 'pull_request_target' && github.event.label.name == 'safe to test' && contains(github.event.pull_request.labels.*.name, 'safe to test'))
 
     steps:
+    - name: Setup go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.21'
+
+    - name: Setup node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+      with:
+        version: "21.x"
+
+    - name: Install protoc-gen-js and plugins
+      run: npm install -g protoc-gen-js protoc-gen-grpc-web
+
     - name: Check out main branch code
       if: github.event_name == 'workflow_dispatch' || github.event_name == 'push'
       uses: actions/checkout@v3
@@ -65,8 +80,7 @@ jobs:
       run: |
         git init
         git add .
-        chown -R testbot .
-        sudo -u testbot bash -lc 'make build lint'
+        make build lint
         GEN_DIFF=$(git status -s)
         if [ -n "$GEN_DIFF" ]; then
             echo '"make build lint" resulted in changes not in git' 1>&2
@@ -75,7 +89,7 @@ jobs:
         fi
 
     - name: Test js library
-      run: sudo -u testbot bash -lc 'CI=true make test-web'
+      run: CI=true make test-web
 
     - if: failure()
       name: Upload js test report
@@ -90,9 +104,9 @@ jobs:
         TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
         MONGODB_TEST_OUTPUT_URI: ${{ secrets.MONGODB_TEST_OUTPUT_URI }}
       run: |
-        sudo -u testbot bash -lc 'echo "${{ secrets.ARTIFACT_GOOGLE_APPLICATION_CREDENTIALS }}" | base64 -d > artifact_google_creds.json'
+        echo "${{ secrets.ARTIFACT_GOOGLE_APPLICATION_CREDENTIALS }}" | base64 -d > artifact_google_creds.json
         export ARTIFACT_GOOGLE_APPLICATION_CREDENTIALS=`pwd`/artifact_google_creds.json
-        sudo -u testbot --preserve-env=ARTIFACT_GOOGLE_APPLICATION_CREDENTIALS,TEST_MONGODB_URI,MONGODB_TEST_OUTPUT_URI,GITHUB_SHA,GITHUB_RUN_ID,GITHUB_RUN_NUMBER,GITHUB_RUN_ATTEMPT,GITHUB_X_PR_BASE_SHA,GITHUB_X_PR_BASE_REF,GITHUB_X_HEAD_REF,GITHUB_X_HEAD_SHA,GITHUB_REPOSITORY bash -lc 'make cover'
+        make cover
 
     - name: Upload test.json
       if: always()
@@ -102,10 +116,11 @@ jobs:
         path: json.log
         retention-days: 30
 
+    # TODO(APP-3946): restore this test - it is designed to test the ability to change users.
+    # Details: https://github.com/viamrobotics/goutils/pull/245#discussion_r1488649164
+    #
     # this one runs as root for CAP_SETUID
     - name: test run-as-user
-      env:
-        TEST_SUBPROC_USER: testbot
       run: go test -v ./pexec -run TestManagedProcessStart
 
     - name: Add Coverage PR Comment
