--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -123,7 +123,7 @@ jobs:
       env:
         TEST_SUBPROC_USER: subproc_user
       run: |
-        useradd $TEST_SUBPROC_USER
+        sudo useradd $TEST_SUBPROC_USER
         go test -v ./pexec -run TestManagedProcessStart
 
     - name: Add Coverage PR Comment
