--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -4,12 +4,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.13.0",
-    "google-protobuf": "^3.14.0"
-  },
-  "peerDependencies": {
-    "@improbable-eng/grpc-web-react-native-transport": "*",
-    "react-native": "*",
-    "react-native-webrtc": "*"
+    "google-protobuf": "^3.14.0",
+    "@improbable-eng/grpc-web-react-native-transport": "^0.15.0"
   },
   "devDependencies": {
     "@improbable-eng/grpc-web-react-native-transport": "*",
