--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "license": "Apache-2.0",
   "dependencies": {
-    "@improbable-eng/grpc-web": "^0.13.0",
     "google-protobuf": "^3.14.0",
+    "@improbable-eng/grpc-web": "^0.13.0",
     "@improbable-eng/grpc-web-react-native-transport": "^0.15.0"
   },
   "devDependencies": {
-    "@improbable-eng/grpc-web-react-native-transport": "*",
     "@types/google-protobuf": "^3.7.4",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
@@ -27,8 +26,7 @@
     "ts-protoc-gen": "^0.14.0",
     "tslib": "^2.4.1",
     "typescript": "^5.2.2",
-    "vite": "^4.0.0",
-    "vite-plugin-externals": "^0.6.2"
+    "vite": "^4.0.0"
   },
   "type": "module",
   "types": "./dist/main.d.ts",
