--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -7,6 +7,10 @@
     "@improbable-eng/grpc-web": "^0.13.0",
     "@improbable-eng/grpc-web-react-native-transport": "^0.15.0"
   },
+  "peerDependencies": {
+    "react-native": "*",
+    "react-native-webrtc": "*"
+  },
   "devDependencies": {
     "@types/google-protobuf": "^3.7.4",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
