--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -3,8 +3,8 @@
   "version": "0.2.3",
   "license": "Apache-2.0",
   "dependencies": {
-    "google-protobuf": "^3.14.0",
-    "@improbable-eng/grpc-web": "^0.13.0"
+    "@improbable-eng/grpc-web": "^0.13.0",
+    "google-protobuf": "^3.14.0"
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.7.4",
