--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -72,6 +72,7 @@ linters-settings:
   govet:
     enable-all: true
     disable:
+      - atomicalign
       - fieldalignment
       - shadow
   lll:
