download missing grpc-web

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,12 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: get grpc-web
+        run: |
+          curl --fail --location 'https://github.com/grpc/grpc-web/releases/download/1.5.0/protoc-gen-grpc-web-1.5.0-linux-x86_64' -o protoc-gen-grpc-web
+          chmod +x protoc-gen-grpc-web
+          sudo install -t /usr/local/bin protoc-gen-grpc-web
+
       - name: Install Build
         run: make build-web
 
