rm base image, use setup-go for caching, install protobuf-compiler

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,16 +9,19 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    container: ghcr.io/viamrobotics/rdk-devenv:amd64
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           persist-credentials: false
 
-      - name: get grpc-web
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.21'
+
+      - name: deps
         run: |
+          sudo apt-get install -qy protobuf-compiler
           curl --fail --location https://github.com/grpc/grpc-web/releases/download/1.5.0/protoc-gen-grpc-web-1.5.0-linux-x86_64 -o protoc-gen-grpc-web
           chmod +x protoc-gen-grpc-web
           sudo install -t /usr/local/bin protoc-gen-grpc-web
