--- a/rpc/js/tsconfig.build.json
+++ b/rpc/js/tsconfig.build.json
@@ -4,7 +4,8 @@
     "declaration": true,
     "emitDeclarationOnly": true,
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "dist",
+    "noEmit": false
   },
   "include": ["src"]
 }
