--- a/rpc/examples/echo/node-client/tsconfig.json
+++ b/rpc/examples/echo/node-client/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "extends": "@viamrobotics/typescript-config/base.json",
   "compilerOptions": {
-    "target": "esnext",
+    "target": "ES5",
+    "useDefineForClassFields": true,
+    "importHelpers": true,
     "module": "ESNext",
     "moduleResolution": "node",
+    "verbatimModuleSyntax": false,
     "lib": ["ESNext", "DOM", "DOM.iterable"],
-    "noEmit": true
+    "types": ["node"]
   },
-  "include": ["src", "vite.config.ts", ".*.cjs"],
+  "include": ["src", ".*.cjs"],
   "exclude": ["node_modules", "src/gen"]
 }
